
A Classic Fairytale:
 + Mission 3: Display number of turns left at timed parcours
 * Fix incorrect storytelling in mission descriptions

Theme customization:
 + Add fallback music with fallback-music and fallback-sd-music
 * Fix green color channel on themes with sd-tint

Lua API:
 + New call: WriteLnToChat(string): Add a line in the chat
 * Fix call: SetWeapon(amNothing) now unselects weapon

====================== 0.9.23 ======================
HIGHLIGHTS:
 + Battalion style
 + Fort mode is now a map type instead of a scheme setting
 + Fort mode now works with more than 2 teams
 + New weapon: rubber duck
 + New theme, map, 3 forts, 3 missions, some hats and graves
 + WxW style allows you to select one of many wall sets
 + Complete HedgeEditor overhaul
 + Greatly improved script parameter support for many styles
 + Improves stats screen of most styles and missions
 + Various improvements for almost all styles
 + AI hedgehogs can now use Bee, Vamprism, and Time Box
 + Campaign page now shows your progress
 + Improved turn timer
 + Improved randomization options in team and multiplayer pages
 + Improved theme customization support
 + Various Lua API additions
 * Fix cursor often jumping around after clicking
 * A huge amount of bugfixes for both campaigns, the missions and styles
 * Video recording functionality is restored

Content:
 + New game-style/mode: Battalion (see https://hedgewars.org/wiki/Battalion )
 + New theme: Beach
 + New theme music for Jungle and Fruit themes
 + Change SD theme music for Halloween and Hoggywood (old tracks)
 + Completely new Cheese map; replaces the old one
 + New forts: Lonely_Island, Octopus, Olympic, Snail
 + Many new random hedgehog and team names
 + Add hats: barrelhider, bishop, jester, leprechaun, pirate_eyepatch, tf_scout, zoo_octopus